[build-system]
requires = ["hatchling"]
build-backend="hatchling.build"

[project]
name = "airflow-ha"
authors = [{name = "the airflow-ha authors", email = "t.paine154@gmail.com"}]
description = "High Availability (HA) DAG Utility"
readme = "README.md"
license = { text = "Apache-2.0" }
version = "1.6.2"
requires-python = ">=3.11"
keywords = [
    "airflow",
    "scheduler",
    "config",
    "high-availability",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    "airflow-pydantic>=1.4,<1.6",
]

[project.optional-dependencies]
develop = [
    "build",
    "bump-my-version",
    "check-manifest",
    "codespell>=2.4,<2.5",
    "hatchling",
    "mdformat>=0.7.22,<0.8",
    "mdformat-tables>=1",
    "pytest",
    "pytest-cov",
    "ruff",
    "twine",
    "uv",
    "wheel",
    # Testing
    "airflow-config>=1.11",
]
airflow = [
    "apache-airflow>=2.8,<4",
    "apache-airflow-providers-ssh",
    "apache-airflow-providers-standard",
    "paramiko<4",
    "structlog<25.5.0",
]
airflow3 = [
    "apache-airflow>=3,<3.2",
    "apache-airflow-providers-ssh",
    "apache-airflow-providers-standard",
    "paramiko<4",
    "structlog<25.5.0",
]

[project.scripts]

[project.urls]
Repository = "https://github.com/airflow-laminar/airflow-ha"
Homepage = "https://github.com/airflow-laminar/airflow-ha"

[tool.bumpversion]
current_version = "1.6.2"
commit = true
tag = true
commit_args = "-s"

[[tool.bumpversion.files]]
filename = "airflow_ha/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[tool.check-manifest]
ignore = [
    ".copier-answers.yaml",
    "Makefile",
    "docs/**/*",
]

[tool.coverage.run]
branch = true
omit = [
    "airflow_ha/tests/integration/",
]
[tool.coverage.report]
exclude_also = [
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
]
ignore_errors = true
fail_under = 90

[tool.hatch.build]
artifacts = []

[tool.hatch.build.sources]
src = "/"

[tool.hatch.build.targets.sdist]
packages = ["airflow_ha"]

[tool.hatch.build.targets.wheel]
packages = ["airflow_ha"]

[tool.hatch.build.targets.wheel.shared-data]

[tool.pytest.ini_options]
addopts = ["-vvv", "--junitxml=junit.xml"]
testpaths = "airflow_ha/tests"

[tool.ruff]
line-length = 150

[tool.ruff.lint]
extend-select = ["I", "AIR301"]
preview = true

[tool.ruff.lint.isort]
combine-as-imports = true
default-section = "third-party"
known-first-party = ["airflow_ha"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.yardang]
title = "airflow-ha"
root = "README.md"
pages = ["docs/src/API.md"]
use-autoapi = false
